objects/Academic_Information__c.object
<CustomObject>
    <description>Orphan Academic Information</description>
    <fields>
        <fullName>Academic_End_Date__c</fullName>
        <label>Academic End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Academic_Start_Date__c</fullName>
        <label>Academic Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Class_Number_ID__c</fullName>
        <label>Class Number / ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Number__c</fullName>
        <label>Class Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Size__c</fullName>
        <label>Class Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Teacher_Name__c</fullName>
        <label>Class Teacher Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_SponsoreeAcademic_Id__c</fullName>
        <externalId>true</externalId>
        <label>DMS SponsoreeAcademic Id</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Distance_To_School_MOU__c</fullName>
        <label>Distance To School MOU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Km</fullName>
                    <default>true</default>
                    <label>Km</label>
                </value>
                <value>
                    <fullName>Miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distance_To_School__c</fullName>
        <label>Distance To School</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolment_Year__c</fullName>
        <label>Enrolment Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Orphan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orphan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Orphan</value>
            </filterItems>
            <infoMessage>Please select an Orphan</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Academic Informations</relationshipLabel>
        <relationshipName>Academic_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Residency__c</fullName>
        <label>School Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>Off Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SponsoreeAcademicAttendances__c</fullName>
        <label>SponsoreeAcademicAttendances</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Acceptable</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SponsoreeOverallGrades__c</fullName>
        <label>SponsoreeOverallGrades</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transport_to_School__c</fullName>
        <label>Transport to School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bicycle</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Minibus</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>Private Transport</fullName>
                </value>
                <value>
                    <fullName>Public Bus</fullName>
                </value>
                <value>
                    <fullName>Rickshaw</fullName>
                </value>
                <value>
                    <fullName>School Bus</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
                <value>
                    <fullName>Walks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_School__c</fullName>
        <label>Type of School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Government School</fullName>
                </value>
                <value>
                    <fullName>Private School</fullName>
                </value>
                <value>
                    <fullName>Madrassah</fullName>
                </value>
                <value>
                    <fullName>Vocational Training Centre</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Orphan_Visit__c</referenceTo>
        <relationshipLabel>Academic Informations</relationshipLabel>
        <relationshipName>Academic_Informations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Academic Information</label>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>Academic Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academic Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>